// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRow should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxhUy djyxHj group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxhCb xlrPM font-bold "
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <span>
                arkx
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center "
          />
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              %
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center "
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="sc-AxhCb bdHkpa justify-end font-bold text-theme-neutral-dark "
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="sc-AxhCb fhxLXM justify-end "
          >
            <button
              class="sc-AxjAm fPpool"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              Not Selected
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxhUy djyxHj group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxhCb xlrPM font-bold "
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <span>
                arkx
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center "
          />
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              %
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center "
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark "
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="sc-AxhCb bdHkpa justify-end font-bold text-theme-neutral-dark "
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="sc-AxhCb fhxLXM justify-end "
          >
            <button
              class="sc-AxjAm fPpool"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              Not Selected
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxhUy djyxHj group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxhCb xlrPM font-bold bg-theme-success-50"
          >
            <div
              class="flex items-center space-x-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <span>
                arkx
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center bg-theme-success-50"
          />
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark bg-theme-success-50"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark bg-theme-success-50"
          >
            <span>
              %
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center bg-theme-success-50"
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark bg-theme-success-50"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark bg-theme-success-50"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxhCb bdHkpa justify-center font-bold text-theme-neutral-dark bg-theme-success-50"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="sc-AxhCb bdHkpa justify-end font-bold text-theme-neutral-dark bg-theme-success-50"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="sc-AxhCb fhxLXM justify-end bg-theme-success-50"
          >
            <button
              class="sc-AxjAm bEJpOZ"
              color="success"
              data-testid="DelegateRow__toggle-1"
              type="button"
            >
              Selected
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
